# ffmpeg_share_library_demo

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/tck/ffmpeg/share/: FFmpegBasicHandler.kt  MainActivity.kt
app/src/main/res/values/: strings.xml
